working on tablet mode

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 </head>
 <body>
     <main>
-      <nav id="navbar"></nav>
+      <nav id="navbar">
+        <img src="./asset/icon-hamburger.svg" alt="opensvg">
+        <img src="./asset/icon-close.svg" alt="closesvg">
+      </nav>
         <section class="main-content" id="Home">
           
+
            <div class="mother main-container">
             <div class="second-container">
-                I’m Nicholas Vandyck <br>
-                <span>Front-end</span> Developer
+                <h1>I’m Nicholas Vandyck <br>
+                <span>Front-end</span> Developer</h1>
             <div class="third-container">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Et, volutpat feugiat placerat lobortis. 
@@ -48,23 +52,23 @@
         </section>
 
         <section  id="About">
-          <div class="about-us">
-            <div class="education-section">
-            <h4>Education</h4>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
-                Velit officia consequat duis enim velit mollit. lorem ipsum</p>
-              </div>
-              <div class="work-section">
-            <h4>Work History</h4>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
-                Velit officia consequat duis enim velit mollit. lorem ipsum</p>
-            </div>
-          </div>
-          </div>
-
           <div id="school-work">
+            <div class="education-container">
+            <div class="education-section">
+              <h4>Education</h4>
+              <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                  Velit officia consequat duis enim velit mollit. lorem ipsum</p>
+                </div>
             <div id="school"></div>
+          </div>
+            <div class="work-container">
+            <div class="work-section">
+              <h4>Work History</h4>
+              <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                  Velit officia consequat duis enim velit mollit. lorem ipsum</p>
+              </div>
             <div id="work"></div>
+          </div>
           </div>
         </section>
 
