mobile mode added

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 <body>
     <main>
       <nav id="navbar">
-        <img src="./asset/icon-hamburger.svg" alt="opensvg">
-        <img src="./asset/icon-close.svg" alt="closesvg">
+       
       </nav>
         <section class="main-content" id="Home">
           
 
            <div class="mother main-container">
+            <img class="open" src="./asset/icon-hamburger.svg" alt="opensvg">
+            <img class="close" src="./asset/icon-close.svg" alt="closesvg">
             <div class="second-container">
                 <h1>I’m Nicholas Vandyck <br>
                 <span>Front-end</span> Developer</h1>
